@@ -3,11 +3,11 @@
 //
 // Author:
 //	 stubbed out by Stefan Warnke (StefanW@POBox.com)
-//	 impelemented by ...
 //
 // (C) Ximian, Inc., 2002
 //
 using System;
+
 
 
 namespace Sytem.Windows.Forms
@@ -22,8 +22,16 @@ namespace Sytem.Windows.Forms
 	/// </summary>
 	public class UICuesEventArgs : EventArgs
 	{
+//		// Specifies the state of the user interface
 //		public enum UICues {
-//			Changed,ChangeFocus,ChangeKeyboard,None,ShowFocus,ShowKeyboard,Shown
+//			Changed,		// The state of the focus cues and keyboard cues has changed. 
+//			ChangeFocus,	// The state of the focus cues has changed. 
+//			ChangeKeyboard,	// The state of the keyboard cues has changed. 
+//			None,			// No change was made.
+//			ShowFocus,		// Focus rectangles are displayed after the change.
+//			ShowKeyboard,	// Keyboard cues are underlined after the change. 
+//			Shown			// Focus rectangles are displayed and keyboard cues are underlined 
+//							// after the change. 
 //		};
 //
 //		/// --- Constructor ---
@@ -31,61 +39,58 @@ namespace Sytem.Windows.Forms
 //			throw new NotImplementedException ();
 //		}
 //
-//		/// --- Properties ---
+//		/// --- Destructor ---
+//		~UICuesEventArgs() {
+//			throw new NotImplementedException ();
+//		}
+//
+//		/// --- Public Properties ---
+//		#region Public Properties
+//
+//		// Gets the bitwise combination of the UICues values
 //		public UICues Changed {
 //			get {
 //				throw new NotImplementedException ();
 //			}
 //		}
 //		
+//		// Gets a value indicating whether the state of the focus cues has changed.
 //		public bool ChangeFocus {
 //			get {
 //				throw new NotImplementedException ();
 //			}
 //		}
 //
+//		// Gets a value indicating whether the state of the keyboard cues has changed
 //		public bool ChangeKeyboard {
-//			get 
-//			{
+//			get {
 //				throw new NotImplementedException ();
 //			}
 //		}
 //
+//		// Gets a value indicating whether focus rectangles are shown after the change
 //		public bool ShowFocus {
-//			get 
-//			{
+//			get {
 //				throw new NotImplementedException ();
 //			}
 //		}
 //
+//		// Gets a value indicating whether keyboard cues are underlined after the change
 //		public bool ShowKeyboard {
-//			get 
-//			{
+//			get {
 //				throw new NotImplementedException ();
 //			}
 //		}
+//		#endregion // Public Properties
 //
 //		/// --- Public Methods ---
-//		public virtual bool Equals(object obj) {
-//			throw new NotImplementedException ();
-//		}
+//		#region Public Methods
 //
-//		public virtual int GetHashCode() {
+//		// Returns a String that represents the current Object
+//		public override string ToString() {			
 //			throw new NotImplementedException ();
 //		}
-//
-//		public Type GetType() {
-//			throw new NotImplementedException ();
-//		}
-//
-//		public virtual string ToString() {			
-//			throw new NotImplementedException ();
-//		}
-//
-//		/// --- Protected Methods ---
-//		protected object MemberwiseClone() {
-//			throw new NotImplementedException ();
-//		}
+//		#endregion // Public Methods
 
 	}
 }
