@@ -3,11 +3,13 @@
 //
 // Author:
 //	 stubbed out by Stefan Warnke (StefanW@POBox.com)
-//	 impelemented by ...
 //
 // (C) Ximian, Inc., 2002
 //
 using System;
+using System.Drawing;
+using System.Windows.Forms;
+using System.ComponentModel;
 
 namespace Sytem.Windows.Forms
 {
@@ -17,16 +19,24 @@ namespace Sytem.Windows.Forms
 
 
 	/// <summary>
-	/// The up-down control consists of a text box and a small vertical scroll bar, 
-	/// commonly referred to as a spinner control.
+	/// The up-down control consists of a text box and a small vertical scroll 
+	/// bar, commonly referred to as a spinner control.
 	/// </summary>
 	public abstract class UpDownBase : ContainerControl
 	{
+//		/// --- Constructor ---
 //		public UpDownBase()	{
 //			throw new NotImplementedException ();
 //		}
 //
-//		/// --- Properties ---
+//		/// --- Destructor ---
+//		~UpDownBase() {
+//			throw new NotImplementedException ();
+//		}
+//
+//		/// --- Public Properties ---
+//		#region Public Properties
+//		// Gets or sets the background color for the control
 //		public override Color BackColor {
 //			get {
 //				throw new NotImplementedException ();
@@ -36,6 +46,7 @@ namespace Sytem.Windows.Forms
 //			}
 //		}
 //
+//		// Gets or sets the background image displayed in the control
 //		public override Image BackgroundImage {
 //			get {
 //				throw new NotImplementedException ();
@@ -45,6 +56,7 @@ namespace Sytem.Windows.Forms
 //			}
 //		}
 //
+//		// Gets or sets the border style for the up-down control
 //		public BorderStyle BorderStyle {
 //			get {
 //				throw new NotImplementedException ();
@@ -54,6 +66,7 @@ namespace Sytem.Windows.Forms
 //			}
 //		}
 //
+//		// Gets or sets the shortcut menu associated with the control
 //		public override ContextMenu ContextMenu {
 //			get {
 //				throw new NotImplementedException ();
@@ -63,12 +76,14 @@ namespace Sytem.Windows.Forms
 //			}
 //		}
 //
+//		// Gets a value indicating whether the control has input focus
 //		public override bool Focused {
 //			get {
 //				throw new NotImplementedException ();
 //			}
 //		}
 //		
+//		// Gets or sets the foreground color of the control
 //		public override Color ForeColor {
 //			get {
 //				throw new NotImplementedException ();
@@ -78,6 +93,8 @@ namespace Sytem.Windows.Forms
 //			}
 //		}
 //
+//		// Gets or sets a value indicating whether the user can use the 
+//		// UP ARROW and DOWN ARROW keys to select values
 //		public bool InterceptArrowKeys {
 //			get {
 //				throw new NotImplementedException ();
@@ -87,12 +104,15 @@ namespace Sytem.Windows.Forms
 //			}
 //		}
 //
+//		// Gets the height of the up-down control
 //		public int PreferredHeight {
 //			get {
 //				throw new NotImplementedException ();
 //			}
 //		}
 //
+//		// Gets or sets a value indicating whether the text may be 
+//		// changed by the use of the up or down buttons only
 //		public bool ReadOnly {
 //			get {
 //				throw new NotImplementedException ();
@@ -102,6 +122,17 @@ namespace Sytem.Windows.Forms
 //			}
 //		}
 //
+//		// Gets or sets the site of the control.
+//		public override ISite Site {
+//			get {
+//				throw new NotImplementedException ();
+//			}
+//			set {
+//				throw new NotImplementedException ();
+//			}
+//		}
+//
+//		// Gets or sets the text displayed in the up-down control
 //		public override string Text {
 //			get {
 //				throw new NotImplementedException ();
@@ -111,6 +142,7 @@ namespace Sytem.Windows.Forms
 //			}
 //		}
 //
+//		// Gets or sets the alignment of the text in the up-down control
 //		public HorizontalAlignment TextAlign {
 //			get {
 //				throw new NotImplementedException ();
@@ -120,6 +152,8 @@ namespace Sytem.Windows.Forms
 //			}
 //		}
 //
+//		// Gets or sets the alignment of the up and down buttons on the 
+//		// up-down control
 //		public LeftRightAlignment UpDownAlign {
 //			get {
 //				throw new NotImplementedException ();
@@ -128,22 +162,34 @@ namespace Sytem.Windows.Forms
 //				throw new NotImplementedException ();
 //			}
 //		}
+//		#endregion // Public Properties
+//
 //
 //		/// --- Public Methods ---
-//		public abstract void DownButton() {
-//			throw new NotImplementedException ();
-//		}
+//		#region Public Methods
 //
+//		// When overridden in a derived class, handles the pressing of the down 
+//		// button on the up-down control. 
+//		public abstract void DownButton();
+//	
+//		// Selects a range of text in the up-down control specifying the 
+//		// starting position and number of characters to select.
 //		public void Select(int start,int length) {
 //			throw new NotImplementedException ();
 //		}
 //		
-//		public abstract void UpButton() {
-//			throw new NotImplementedException ();
-//		}
-//	
+//		// When overridden in a derived class, handles the pressing of 
+//		// the up button on the up-down control
+//		public abstract void UpButton();
+//
+//		#endregion // Public Methods
+//
 //
 //		/// --- Protected Properties ---
+//		#region Protected Properties
+//
+//		// Gets or sets a value indicating whether the text property is being 
+//		// changed internally by its parent class
 //		protected bool ChangingText {
 //			get {
 //				throw new NotImplementedException ();
@@ -153,18 +199,21 @@ namespace Sytem.Windows.Forms
 //			}
 //		}
 //
+//		// Gets the required creation parameters when the control handle is created
 //		protected override CreateParams CreateParams {
 //			get {
 //				throw new NotImplementedException ();
 //			}
 //		}
 //
+//		// Gets the default size of the control.
 //		protected override Size DefaultSize {
 //			get {
 //				throw new NotImplementedException ();
 //			}
 //		}
-//	
+//
+//		// Gets or sets a value indicating whether a value has been entered by the user
 //		protected bool UserEdit {
 //			get {
 //				throw new NotImplementedException ();
@@ -173,56 +222,73 @@ namespace Sytem.Windows.Forms
 //				throw new NotImplementedException ();
 //			}
 //		}
+//		#endregion // Protected Properties
 //
 //	
 //		/// --- Protected Methods ---
+//		#region Protected Methods
+//
+//		// Raises the FontChanged event
 //		protected override void OnFontChanged(EventArgs e) {
 //			throw new NotImplementedException ();
 //		}
 //
+//		// Raises the HandleCreated event
 //		protected override void OnHandleCreated(EventArgs e) {
 //			throw new NotImplementedException ();
 //		}
 //
+//		// Raises the Layout event
 //		protected override void OnLayout(LayoutEventArgs e) {
 //			throw new NotImplementedException ();
 //		}
 //	
+//		// Raises the MouseWheel event
 //		protected override void OnMouseWheel(MouseEventArgs e) {
 //			throw new NotImplementedException ();
 //		}
 //
+//		// Raises the KeyDown event
 //		protected virtual void OnTextBoxKeyDown(object source, KeyEventArgs e) {
 //			throw new NotImplementedException ();
 //		}
 //
+//		// Raises the KeyPress event
 //		protected virtual void OnTextBoxKeyPress(object source, KeyPressEventArgs e) {
 //			throw new NotImplementedException ();
 //		}
 //
+//		// Raises the LostFocus event
 //		protected virtual void OnTextBoxLostFocus(object source, EventArgs e) {
 //			throw new NotImplementedException ();
 //		}
 //
+//		// Raises the Resize event
 //		protected virtual void OnTextBoxResize(object source, EventArgs e) {
 //			throw new NotImplementedException ();
 //		}
 //		
+//		// Raises the TextChanged event.
 //		protected virtual void OnTextBoxTextChanged(object source, EventArgs e) {
 //			throw new NotImplementedException ();
 //		}
 //		
-//		protected override void SetBoundsCore(int x, int y, int width, int height, BoundsSpecified specified) {
-//			throw new NotImplementedException ();
-//		}
-//		
-//		protected abstract void UpdateEditText() {
+//		// This member overrides Control.SetBoundsCore.
+//		protected override void SetBoundsCore(int x, int y, int width, 
+//			int height, BoundsSpecified specified)  {
 //			throw new NotImplementedException ();
 //		}
 //
+//		// When overridden in a derived class, updates the text displayed in the
+//		// up-down control
+//		protected abstract void UpdateEditText();
+//
+//		// When overridden in a derived class, validates the text displayed in the
+//		// up-down control
 //		protected virtual void ValidateEditText() {
 //			throw new NotImplementedException ();
 //		}
-
+//		#endregion // Protected Methods
+//
 	}
 }
